--- a/contact.html
+++ b/contact.html
@@ -4,18 +4,17 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Contact — Saimn Zuhairi</title>
-  <link rel="stylesheet" href="./Style.css?v=1">
+  <link rel="stylesheet" href="./style.css?v=1">
 </head>
 <body>
   <canvas id="starfield"></canvas>
-
   <header class="navbar">
     <h1 class="logo">Saimn Zuhairi</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="projects.html">Projects</a>
-      <a href="Experience.html">Experience</a>
-      <a href="Contact.html" class="active">Contact</a>
+      <a href="experience.html">Experience</a>
+      <a href="contact.html" class="active">Contact</a>
     </nav>
   </header>
 
@@ -34,9 +33,9 @@
       <button type="submit" class="btn">Send Email</button>
     </form>
 
-    <a href="Saimn_Zuhairi_Resume_compressed-1%20(1).pdf" download class="btn" style="display:inline-block;margin-top:18px;">Download Résumé (PDF)</a>
+    <a href="resume.pdf" download class="btn" style="display:inline-block;margin-top:18px;">Download Résumé (PDF)</a>
   </main>
 
-  <script src="./Script.js" defer></script>
+  <script src="./script.js" defer></script>
 </body>
 </html>
