--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 </head>
 <body>
   <canvas id="starfield"></canvas>
+
   <header class="navbar">
-    <h1 class="logo">Saimn Zuhairi</h1>
+    <a class="logo" href="index.html" aria-label="Home">
+      <h1>Saimn Zuhairi</h1>
+    </a>
     <nav>
       <a href="index.html">Home</a>
       <a href="projects.html" class="active">Projects</a>
@@ -19,6 +22,11 @@
   </header>
 
   <main class="section">
+    <section id="about" class="about-section">
+      <h2>About Me</h2>
+      <p>Hi — I'm Saimn Zuhairi, an aspiring aerospace engineer with interests in flight dynamics, control systems, and embedded systems. I build simulation projects in Python, small hardware prototypes, and this responsive portfolio site. I'm open to internships and entry-level roles — feel free to <a href="contact.html">reach out</a>.</p>
+    </section>
+
     <h2>Engineering & Aerospace Projects</h2>
 
     <div class="project-grid">
