--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Home — Saimn Zuhairi</title>
-  <link rel="stylesheet" href="./style.css?v=2">
+  <link rel="stylesheet" href="./style.css?v=3">
 </head>
 <body>
   <canvas id="starfield" aria-hidden="true"></canvas>
@@ -28,6 +28,14 @@
         <h2>About Me</h2>
         <p>Hi — I'm Saimn Zuhairi, an aspiring aerospace engineer interested in flight dynamics, control systems, and embedded systems. I build simulations in Python, small hardware prototypes, and this responsive portfolio site. I'm open to internships and entry-level roles — feel free to <a href="contact.html">reach out</a>.</p>
       </div>
+    </section>
+
+    <h2>Design Sketches</h2>
+    <section class="sketch-gallery">
+      <figure><img src="images/sketch1.jpg" alt="Design sketch 1"><figcaption>Sketch 1 — initial concept (side/top/bottom views)</figcaption></figure>
+      <figure><img src="images/sketch2.jpg" alt="Design sketch 2"><figcaption>Sketch 2 — cavity for ballast</figcaption></figure>
+      <figure><img src="images/sketch3.jpg" alt="Design sketch 3"><figcaption>Sketch 3 — refined body and cockpit</figcaption></figure>
+      <figure><img src="images/sketch4.jpg" alt="Fuel flow plot"><figcaption>Fuel Flow Plot (fuel vs altitude / wind conditions)</figcaption></figure>
     </section>
 
     <h2>Engineering & Aerospace Projects</h2>
