--- a/projects/gravity-powered-car.html
+++ b/projects/gravity-powered-car.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Gravity-Powered Car — Saimn Zuhairi</title>
-  <link rel="stylesheet" href="../style.css?v=3">
+  <link rel="stylesheet" href="../style.css?v=5">
 </head>
 <body>
   <canvas id="starfield" aria-hidden="true"></canvas>
@@ -23,18 +23,30 @@
     <h2>Gravity-Powered Car (Recycled Materials)</h2>
 
     <section class="project-media">
-      <figure><img src="../images/sketch1.jpg" alt="Sketches of gravity car (top/side)"><figcaption>Sketch 1 — concept views (top/side/bottom)</figcaption></figure>
-      <figure><img src="../images/sketch2.jpg" alt="Sketch showing ballast cavity"><figcaption>Sketch 2 — added cavity for ballast weight</figcaption></figure>
+      <figure><img src="../images/sketch1.jpg" alt="Sketches of gravity car"><figcaption>Sketch 1 — concept views</figcaption></figure>
+      <figure><img src="../images/sketch2.jpg" alt="Ballast cavity sketch"><figcaption>Sketch 2 — ballast cavity</figcaption></figure>
+      <figure><img src="../images/project1.svg" alt="prototype photo"><figcaption>Prototype thumbnail</figcaption></figure>
     </section>
 
     <section class="project-explanation">
-      <h3>Design notes</h3>
+      <h3>Overview</h3>
+      <p>Objective: build an ultra-low-cost gravity car to study how mass distribution and axle alignment affect run distance and speed down an inclined track.</p>
+
+      <h3>Materials & fabrication</h3>
       <ul>
-        <li>Body: lightweight styrofoam or recycled plastic shaped for low drag.</li>
-        <li>Wheels: low friction bearings and aligned axles; holes placed as in sketches.</li>
-        <li>Ballast: added metal block in a cavity (see sketch 2) to tune mass distribution for downhill runs.</li>
-        <li>Testing: adjust axle alignment and wheel symmetry to minimize frictional losses.</li>
+        <li>Body: carved styrofoam or recycled plastic sheet; shaped to reduce frontal area.</li>
+        <li>Wheels: plastic food-container lids; axles made from metal rods with bushings (or ball bearings if available).</li>
+        <li>Ballast: metal block placed in the internal cavity to tune center of mass (sketch 2).</li>
       </ul>
+
+      <h3>Method</h3>
+      <p>Used a simple jig to ensure parallel axles. Per configuration ran 5 test runs, recorded distances and times, and averaged results. Iterated ballast position and wheel alignment.</p>
+
+      <h3>Results</h3>
+      <p>Small shifts in ballast (5–10 mm) affected distance by up to ~6%. Axle misalignment &gt;1° caused wobble and added rolling resistance. Recommendations: use bearings and a stiffer axle mount for improved repeatability.</p>
+
+      <h3>Files & data</h3>
+      <p>If you want the raw test logs, images or CAD sketches added to this page, upload them to <code>projects/gravity-powered-car/files/</code> (or provide links) and I will link them here.</p>
     </section>
 
     <a class="btn" href="../projects.html">Back to projects</a>
