Fix HTML formatting in About Me section

--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
       <img class="profile-img" src="images/linkedin.jpg" alt="Saimn Zuhairi photo">
       <div class="about-text">
         <h2>About Me</h2>
-        <p>Hi — I'm Saimn Zuhairi, an aspiring aerospace engineer with interests in flight dynamics, control systems, and embedded systems. I work on simulation and physical prototyping: numerical simulation (Python), small hardware prototypes (embedded sensors, low-friction mechanisms), and CAD-driven design for lightweight vehicles. I'm actively seeking internships and entry-level roles in aerospace engineering and related fields. <a href="contact.html">Get in touch</a>.</p>
-        <p class="muted">Tip: upload your LinkedIn profile photo to <code>images/linkedin.jpg</code> in this repo to display it here.</p>
+        <p>Hi — I'm Saimn Zuhairi, an aspiring aerospace engineer with interests in flight dynamics, control systems, and embedded systems. I work on simulation and physical prototyping: numerical simulation (Python), small hardware prototypes (embedded sensors, low-friction mechanisms), and CAD-driven design for lightweight vehicles. I'm actively seeking internships and entry-level roles in aerospace engineering and related fields. <a href="contact.html">Get in touch</a>.</p
       </div>
     </section>
 
