--- a/projects/gravity-powered-car.html
+++ b/projects/gravity-powered-car.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Gravity-Powered Car — Saimn Zuhairi</title>
-  <link rel="stylesheet" href="../style.css?v=5">
+  <link rel="stylesheet" href="../style.css?v=6">
 </head>
-<body>
+<body class="page-enter">
   <canvas id="starfield" aria-hidden="true"></canvas>
 
   <header class="navbar">
@@ -23,34 +23,32 @@
     <h2>Gravity-Powered Car (Recycled Materials)</h2>
 
     <section class="project-media">
-      <figure><img src="../images/sketch1.jpg" alt="Sketches of gravity car"><figcaption>Sketch 1 — concept views</figcaption></figure>
-      <figure><img src="../images/sketch2.jpg" alt="Ballast cavity sketch"><figcaption>Sketch 2 — ballast cavity</figcaption></figure>
-      <figure><img src="../images/project1.svg" alt="prototype photo"><figcaption>Prototype thumbnail</figcaption></figure>
+      <figure><img src="../images/sketch1.jpg" alt="Sketch 1"><figcaption>Sketch 1 — concept views</figcaption></figure>
+      <figure><img src="../images/sketch2.jpg" alt="Sketch 2"><figcaption>Sketch 2 — ballast cavity</figcaption></figure>
+      <figure><img src="../images/project1.svg" alt="Prototype thumbnail"><figcaption>Prototype thumbnail</figcaption></figure>
     </section>
 
     <section class="project-explanation">
       <h3>Overview</h3>
       <p>Objective: build an ultra-low-cost gravity car to study how mass distribution and axle alignment affect run distance and speed down an inclined track.</p>
-
       <h3>Materials & fabrication</h3>
       <ul>
         <li>Body: carved styrofoam or recycled plastic sheet; shaped to reduce frontal area.</li>
         <li>Wheels: plastic food-container lids; axles made from metal rods with bushings (or ball bearings if available).</li>
         <li>Ballast: metal block placed in the internal cavity to tune center of mass (sketch 2).</li>
       </ul>
-
-      <h3>Method</h3>
-      <p>Used a simple jig to ensure parallel axles. Per configuration ran 5 test runs, recorded distances and times, and averaged results. Iterated ballast position and wheel alignment.</p>
-
-      <h3>Results</h3>
-      <p>Small shifts in ballast (5–10 mm) affected distance by up to ~6%. Axle misalignment &gt;1° caused wobble and added rolling resistance. Recommendations: use bearings and a stiffer axle mount for improved repeatability.</p>
-
-      <h3>Files & data</h3>
-      <p>If you want the raw test logs, images or CAD sketches added to this page, upload them to <code>projects/gravity-powered-car/files/</code> (or provide links) and I will link them here.</p>
+      <h3>Measurements & results</h3>
+      <p>Small shifts in ballast (5–10 mm) affected distance by up to ~6%. Axle misalignment &gt;1° caused wobble and added rolling resistance.</p>
     </section>
 
     <a class="btn" href="../projects.html">Back to projects</a>
   </main>
+
+  <div id="lightbox" class="lightbox" aria-hidden="true">
+    <button id="lbClose" class="lb-close" aria-label="Close">✕</button>
+    <img id="lbImg" src="" alt="">
+    <figcaption id="lbCaption"></figcaption>
+  </div>
 
   <script src="../script.js" defer></script>
 </body>
