--- a/projects/flight-path-simulation.html
+++ b/projects/flight-path-simulation.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Flight Path Simulation — Saimn Zuhairi</title>
-  <link rel="stylesheet" href="../style.css?v=5">
+  <link rel="stylesheet" href="../style.css?v=6">
 </head>
-<body>
+<body class="page-enter">
   <canvas id="starfield" aria-hidden="true"></canvas>
 
   <header class="navbar">
@@ -23,30 +23,28 @@
     <h2>Flight Path Simulation (Python)</h2>
 
     <section class="project-media">
-      <figure><img src="../images/project2.svg" alt="Flight sim illustration"><figcaption>Simulation concept</figcaption></figure>
-      <figure><img src="../images/fuelplot.png" alt="Fuel flow plot"><figcaption>Fuel Flow Plot — fuel flow vs altitude under varying winds</figcaption></figure>
-      <figure><img src="../images/fuelplot2.png" alt="Fuel flow plot variant"><figcaption>Additional user-supplied fuel flow plot</figcaption></figure>
+      <figure><img src="../images/project2.svg" alt="Sim illustration"><figcaption>Simulation concept</figcaption></figure>
+      <figure><img src="../images/fuelplot.png" alt="Fuel flow plot"><figcaption>Fuel Flow Plot — fuel flow vs altitude</figcaption></figure>
+      <figure><img src="../images/fuelplot2.png" alt="Fuel flow variant"><figcaption>Alternate fuel flow plot</figcaption></figure>
     </section>
 
     <section class="project-explanation">
       <h3>Model & assumptions</h3>
-      <p>Simplified point-mass aircraft, empirical drag coefficient, thrust and fuel-burn model. Lift approximated linearly around the operating angle-of-attack range.</p>
-
+      <p>Simplified point-mass aircraft with empirical drag coefficient, thrust/fuel model; lift approximated linearly around the operating AoA.</p>
       <h3>Numerical method</h3>
-      <p>RK4 fixed-step integrator (dt chosen for stability). Implemented a PID controller for altitude/heading hold experiments; plotted fuel flow against altitude for different wind cases.</p>
-
-      <h3>Results</h3>
-      <p>Plots show that headwinds increase fuel flow at cruise more than tailwinds reduce it — highlights the importance of wind-aware flight planning for fuel efficiency.</p>
-
+      <p>RK4 fixed-step integrator; simple PID for heading/altitude hold experiments.</p>
       <h3>How to run</h3>
-      <p>Dependencies: numpy, matplotlib. Example: <code>python3 simulate.py --altitude 34000 --wind -20</code>. Output images saved to <code>plots/</code>.</p>
-
-      <h3>Source</h3>
-      <p>Link to the simulation code (if present) in your GitHub repo. If you'd like, provide the repo URL and I will add a "View code" link here.</p>
+      <p>Dependencies: numpy, matplotlib. Example: <code>python3 simulate.py --altitude 34000 --wind -20</code>. Output saved to <code>plots/</code>.</p>
     </section>
 
     <a class="btn" href="../projects.html">Back to projects</a>
   </main>
+
+  <div id="lightbox" class="lightbox" aria-hidden="true">
+    <button id="lbClose" class="lb-close" aria-label="Close">✕</button>
+    <img id="lbImg" src="" alt="">
+    <figcaption id="lbCaption"></figcaption>
+  </div>
 
   <script src="../script.js" defer></script>
 </body>
