--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
         <img src="images/sketch1.jpg" alt="Sketch 1">
         <span>Gravity car — sketches</span>
       </a>
-      <a href="projects/gravity-powered-car.html" class="thumb-link">
-        <img src="images/sketch2.jpg" alt="Sketch 2">
-        <span>Ballast cavity — sketches</span>
-      </a>
+     <a href="projects/gravity-powered-car.html" class="thumb-link">
+  <img src="images/sketch1.jpg" alt="Sketch 1" loading="lazy" width="480" height="320">
+  <span>Gravity car — sketches</span>
+</a>
       <a href="projects/portfolio-website.html" class="thumb-link">
         <img src="images/sketch3.jpg" alt="Sketch 3">
         <span>Refined body / cockpit</span>
