--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Home — Saimn Zuhairi</title>
-  <link rel="stylesheet" href="./style.css?v=6">
+  <link rel="stylesheet" href="./style.css?v=7">
 </head>
 <body class="page-enter">
   <canvas id="starfield" aria-hidden="true"></canvas>
@@ -23,7 +23,12 @@
 
   <main class="section">
     <section id="about" class="about-section">
-      <img class="profile-img" src="images/linkedin.jpg" alt="Saimn photo">
+      <img class="profile-img"
+           src="images/linkedin.jpg"
+           alt="Profile photo"
+           width="400" height="400"
+           loading="eager"
+           fetchpriority="high">
       <div class="about-text">
         <h2>About Me</h2>
         <p>Hi — I'm Saimn Zuhairi, an aspiring aerospace engineer focusing on flight dynamics, control systems and embedded systems. I work on simulation and physical prototyping (Python, sensors, lightweight mechanisms) and CAD-driven designs. I'm actively seeking internships and entry-level roles — <a href="contact.html">get in touch</a>.</p>
@@ -33,19 +38,27 @@
     <h2>Design Sketches (open a project to view images)</h2>
     <section class="sketch-thumbs">
       <a href="projects/gravity-powered-car.html" class="thumb-link">
-        <img src="images/sketch1.jpg" alt="Sketch 1">
+        <img src="images/sketch1.jpg" alt="Sketch 1"
+             width="480" height="320"
+             loading="lazy" decoding="async">
         <span>Gravity car — sketches</span>
       </a>
-     <a href="projects/gravity-powered-car.html" class="thumb-link">
-  <img src="images/sketch1.jpg" alt="Sketch 1" loading="lazy" width="480" height="320">
-  <span>Gravity car — sketches</span>
-</a>
+      <a href="projects/gravity-powered-car.html" class="thumb-link">
+        <img src="images/sketch2.jpg" alt="Sketch 2"
+             width="480" height="320"
+             loading="lazy" decoding="async">
+        <span>Ballast cavity — sketches</span>
+      </a>
       <a href="projects/portfolio-website.html" class="thumb-link">
-        <img src="images/sketch3.jpg" alt="Sketch 3">
+        <img src="images/sketch3.jpg" alt="Sketch 3"
+             width="480" height="320"
+             loading="lazy" decoding="async">
         <span>Refined body / cockpit</span>
       </a>
       <a href="projects/flight-path-simulation.html" class="thumb-link">
-        <img src="images/sketch4.jpg" alt="Fuel flow plot">
+        <img src="images/sketch4.jpg" alt="Fuel flow plot"
+             width="480" height="320"
+             loading="lazy" decoding="async">
         <span>Fuel flow plot</span>
       </a>
     </section>
@@ -54,23 +67,29 @@
 
     <div class="project-grid">
       <article class="project-card">
-        <img src="images/project1.svg" alt="Gravity car">
+        <img src="images/project1.svg" alt="Gravity car icon"
+             width="800" height="480"
+             loading="lazy" decoding="async">
         <h3><a href="projects/gravity-powered-car.html">Gravity-Powered Car (Recycled Materials)</a></h3>
         <p>Lightweight vehicle testbed for mass distribution and rolling-resistance experiments — open for photos, sketches and results.</p>
         <a class="btn small" href="projects/gravity-powered-car.html">View details</a>
       </article>
 
       <article class="project-card">
-        <img src="images/project2.svg" alt="Flight sim">
+        <img src="images/project2.svg" alt="Flight simulation icon"
+             width="800" height="480"
+             loading="lazy" decoding="async">
         <h3><a href="projects/flight-path-simulation.html">Flight Path Simulation (Python)</a></h3>
         <p>RK4-based numerical model, simple PID experiments and fuel-flow analysis — open for code & plots.</p>
         <a class="btn small" href="projects/flight-path-simulation.html">View details</a>
       </article>
 
       <article class="project-card">
-        <img src="images/project3.svg" alt="Portfolio site">
+        <img src="images/project3.svg" alt="Portfolio site icon"
+             width="800" height="480"
+             loading="lazy" decoding="async">
         <h3><a href="projects/portfolio-website.html">Responsive Portfolio Website</a></h3>
-        <p>This site — static HTML/CSS/JS, lightweight and accessible. Click to see design assets and notes.</p>
+        <p>Static HTML/CSS/JS, lightweight and accessible. Click to see design assets and notes.</p>
         <a class="btn small" href="projects/portfolio-website.html">View details</a>
       </article>
     </div>
@@ -81,7 +100,7 @@
 
   <div id="lightbox" class="lightbox" aria-hidden="true">
     <button id="lbClose" class="lb-close" aria-label="Close">✕</button>
-    <img id="lbImg" src="" alt="">
+    <img id="lbImg" src="" alt="" width="1200" height="800">
     <figcaption id="lbCaption"></figcaption>
   </div>
 
